// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CallScreenPage Snapshot Tests matches snapshot for active call state 1`] = `
<div
  aria-label="Video call screen"
  class="fixed inset-0 bg-gray-900 z-50"
  role="main"
>
  <div
    class="absolute inset-0"
  >
    <video
      aria-label="Remote participant video"
      autoplay=""
      class="w-full h-full object-cover"
      playsinline=""
    />
  </div>
  <div
    animate="[object Object]"
    class="absolute top-6 right-6 w-48 h-36 bg-gray-800 rounded-2xl overflow-hidden shadow-2xl border-2 border-white/20"
    dragconstraints="[object Object]"
    initial="[object Object]"
  >
    <video
      aria-label="Your video"
      autoplay=""
      class="w-full h-full object-cover"
      playsinline=""
    />
    <div
      class="absolute bottom-2 left-2 px-2 py-1 bg-black/60 rounded text-white text-xs"
    >
      You
    </div>
  </div>
  <div
    class="absolute top-0 left-0 right-0 p-6 bg-gradient-to-b from-black/60 to-transparent"
  >
    <div
      class="flex items-center justify-between"
    >
      <div>
        <h3
          class="text-white text-xl font-semibold"
        >
          John Doe
        </h3>
        <p
          class="text-gray-300 text-sm"
        >
          0:00
        </p>
      </div>
      <div
        class="flex gap-3"
      >
        <button
          aria-label="Participants"
          class="p-3 bg-white/10 hover:bg-white/20 rounded-xl backdrop-blur-sm transition-colors"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-users w-5 h-5 text-white"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
            />
            <path
              d="M16 3.128a4 4 0 0 1 0 7.744"
            />
            <path
              d="M22 21v-2a4 4 0 0 0-3-3.87"
            />
            <circle
              cx="9"
              cy="7"
              r="4"
            />
          </svg>
        </button>
        <button
          aria-label="More options"
          class="p-3 bg-white/10 hover:bg-white/20 rounded-xl backdrop-blur-sm transition-colors"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-ellipsis-vertical w-5 h-5 text-white"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="1"
            />
            <circle
              cx="12"
              cy="5"
              r="1"
            />
            <circle
              cx="12"
              cy="19"
              r="1"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
  <div
    class="absolute bottom-0 left-0 right-0 p-8 bg-gradient-to-t from-black/80 via-black/60 to-transparent"
  >
    <div
      class="max-w-2xl mx-auto flex items-center justify-center gap-6"
    >
      <button
        aria-label="Mute microphone"
        aria-pressed="false"
        class="p-6 rounded-full transition-all bg-white/10 hover:bg-white/20"
        whilehover="[object Object]"
        whiletap="[object Object]"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-mic w-6 h-6 text-white"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 19v3"
          />
          <path
            d="M19 10v2a7 7 0 0 1-14 0v-2"
          />
          <rect
            height="13"
            rx="3"
            width="6"
            x="9"
            y="2"
          />
        </svg>
      </button>
      <button
        aria-label="Turn off camera"
        aria-pressed="false"
        class="p-6 rounded-full transition-all bg-white/10 hover:bg-white/20"
        whilehover="[object Object]"
        whiletap="[object Object]"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-video w-6 h-6 text-white"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m16 13 5.223 3.482a.5.5 0 0 0 .777-.416V7.87a.5.5 0 0 0-.752-.432L16 10.5"
          />
          <rect
            height="12"
            rx="2"
            width="14"
            x="2"
            y="6"
          />
        </svg>
      </button>
      <button
        aria-label="End call"
        class="p-8 bg-red-500 hover:bg-red-600 rounded-full transition-all shadow-2xl"
        whilehover="[object Object]"
        whiletap="[object Object]"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-phone-off w-7 h-7 text-white"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.1 13.9a14 14 0 0 0 3.732 2.668 1 1 0 0 0 1.213-.303l.355-.465A2 2 0 0 1 17 15h3a2 2 0 0 1 2 2v3a2 2 0 0 1-2 2 18 18 0 0 1-12.728-5.272"
          />
          <path
            d="M22 2 2 22"
          />
          <path
            d="M4.76 13.582A18 18 0 0 1 2 4a2 2 0 0 1 2-2h3a2 2 0 0 1 2 2v3a2 2 0 0 1-.8 1.6l-.468.351a1 1 0 0 0-.292 1.233 14 14 0 0 0 .244.473"
          />
        </svg>
      </button>
      <button
        aria-label="Share screen"
        aria-pressed="false"
        class="p-6 rounded-full transition-all bg-white/10 hover:bg-white/20"
        whilehover="[object Object]"
        whiletap="[object Object]"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-monitor w-6 h-6 text-white"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="14"
            rx="2"
            width="20"
            x="2"
            y="3"
          />
          <line
            x1="8"
            x2="16"
            y1="21"
            y2="21"
          />
          <line
            x1="12"
            x2="12"
            y1="17"
            y2="21"
          />
        </svg>
      </button>
      <button
        aria-label="Mute speaker"
        aria-pressed="false"
        class="p-6 bg-white/10 hover:bg-white/20 rounded-full transition-all"
        whilehover="[object Object]"
        whiletap="[object Object]"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-volume2 lucide-volume-2 w-6 h-6 text-white"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
          />
          <path
            d="M16 9a5 5 0 0 1 0 6"
          />
          <path
            d="M19.364 18.364a9 9 0 0 0 0-12.728"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`CallScreenPage Snapshot Tests matches snapshot for call ended state 1`] = `
<div
  aria-label="Video call screen"
  class="fixed inset-0 bg-gray-900 z-50"
  role="main"
>
  <div
    class="absolute inset-0"
  >
    <div
      class="w-full h-full flex items-center justify-center"
    >
      <div
        animate="[object Object]"
        class="text-center"
        initial="[object Object]"
      >
        <div
          class="text-8xl mb-6"
        >
          📞
        </div>
        <h2
          class="text-3xl font-bold text-white mb-2"
        >
          Call Ended
        </h2>
        <p
          class="text-gray-400"
        >
          Thank you for calling
        </p>
      </div>
    </div>
  </div>
  <div
    class="absolute top-0 left-0 right-0 p-6 bg-gradient-to-b from-black/60 to-transparent"
  >
    <div
      class="flex items-center justify-between"
    >
      <div>
        <h3
          class="text-white text-xl font-semibold"
        >
          John Doe
        </h3>
      </div>
      <div
        class="flex gap-3"
      >
        <button
          aria-label="Participants"
          class="p-3 bg-white/10 hover:bg-white/20 rounded-xl backdrop-blur-sm transition-colors"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-users w-5 h-5 text-white"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
            />
            <path
              d="M16 3.128a4 4 0 0 1 0 7.744"
            />
            <path
              d="M22 21v-2a4 4 0 0 0-3-3.87"
            />
            <circle
              cx="9"
              cy="7"
              r="4"
            />
          </svg>
        </button>
        <button
          aria-label="More options"
          class="p-3 bg-white/10 hover:bg-white/20 rounded-xl backdrop-blur-sm transition-colors"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-ellipsis-vertical w-5 h-5 text-white"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="1"
            />
            <circle
              cx="12"
              cy="5"
              r="1"
            />
            <circle
              cx="12"
              cy="19"
              r="1"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
  <div
    class="absolute bottom-0 left-0 right-0 p-8 bg-gradient-to-t from-black/80 via-black/60 to-transparent"
  >
    <div
      class="max-w-2xl mx-auto flex items-center justify-center gap-6"
    >
      <button
        aria-label="Mute microphone"
        aria-pressed="false"
        class="p-6 rounded-full transition-all bg-white/10 hover:bg-white/20"
        whilehover="[object Object]"
        whiletap="[object Object]"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-mic w-6 h-6 text-white"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 19v3"
          />
          <path
            d="M19 10v2a7 7 0 0 1-14 0v-2"
          />
          <rect
            height="13"
            rx="3"
            width="6"
            x="9"
            y="2"
          />
        </svg>
      </button>
      <button
        aria-label="Turn off camera"
        aria-pressed="false"
        class="p-6 rounded-full transition-all bg-white/10 hover:bg-white/20"
        whilehover="[object Object]"
        whiletap="[object Object]"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-video w-6 h-6 text-white"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m16 13 5.223 3.482a.5.5 0 0 0 .777-.416V7.87a.5.5 0 0 0-.752-.432L16 10.5"
          />
          <rect
            height="12"
            rx="2"
            width="14"
            x="2"
            y="6"
          />
        </svg>
      </button>
      <button
        aria-label="End call"
        class="p-8 bg-red-500 hover:bg-red-600 rounded-full transition-all shadow-2xl"
        whilehover="[object Object]"
        whiletap="[object Object]"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-phone-off w-7 h-7 text-white"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.1 13.9a14 14 0 0 0 3.732 2.668 1 1 0 0 0 1.213-.303l.355-.465A2 2 0 0 1 17 15h3a2 2 0 0 1 2 2v3a2 2 0 0 1-2 2 18 18 0 0 1-12.728-5.272"
          />
          <path
            d="M22 2 2 22"
          />
          <path
            d="M4.76 13.582A18 18 0 0 1 2 4a2 2 0 0 1 2-2h3a2 2 0 0 1 2 2v3a2 2 0 0 1-.8 1.6l-.468.351a1 1 0 0 0-.292 1.233 14 14 0 0 0 .244.473"
          />
        </svg>
      </button>
      <button
        aria-label="Share screen"
        aria-pressed="false"
        class="p-6 rounded-full transition-all bg-white/10 hover:bg-white/20"
        whilehover="[object Object]"
        whiletap="[object Object]"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-monitor w-6 h-6 text-white"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="14"
            rx="2"
            width="20"
            x="2"
            y="3"
          />
          <line
            x1="8"
            x2="16"
            y1="21"
            y2="21"
          />
          <line
            x1="12"
            x2="12"
            y1="17"
            y2="21"
          />
        </svg>
      </button>
      <button
        aria-label="Mute speaker"
        aria-pressed="false"
        class="p-6 bg-white/10 hover:bg-white/20 rounded-full transition-all"
        whilehover="[object Object]"
        whiletap="[object Object]"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-volume2 lucide-volume-2 w-6 h-6 text-white"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
          />
          <path
            d="M16 9a5 5 0 0 1 0 6"
          />
          <path
            d="M19.364 18.364a9 9 0 0 0 0-12.728"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`CallScreenPage Snapshot Tests matches snapshot for connecting state 1`] = `
<div
  aria-label="Video call screen"
  class="fixed inset-0 bg-gray-900 z-50"
  role="main"
>
  <div
    class="absolute inset-0"
  >
    <div
      class="w-full h-full flex items-center justify-center"
    >
      <div
        animate="[object Object]"
        class="text-center"
        initial="[object Object]"
      >
        <div
          class="text-8xl mb-6"
        >
          📞
        </div>
        <h2
          class="text-3xl font-bold text-white mb-2"
        >
          Connecting...
        </h2>
        <p
          class="text-gray-400"
        >
          Please wait
        </p>
      </div>
    </div>
  </div>
  <div
    class="absolute top-0 left-0 right-0 p-6 bg-gradient-to-b from-black/60 to-transparent"
  >
    <div
      class="flex items-center justify-between"
    >
      <div>
        <h3
          class="text-white text-xl font-semibold"
        >
          Call
        </h3>
      </div>
      <div
        class="flex gap-3"
      >
        <button
          aria-label="Participants"
          class="p-3 bg-white/10 hover:bg-white/20 rounded-xl backdrop-blur-sm transition-colors"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-users w-5 h-5 text-white"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
            />
            <path
              d="M16 3.128a4 4 0 0 1 0 7.744"
            />
            <path
              d="M22 21v-2a4 4 0 0 0-3-3.87"
            />
            <circle
              cx="9"
              cy="7"
              r="4"
            />
          </svg>
        </button>
        <button
          aria-label="More options"
          class="p-3 bg-white/10 hover:bg-white/20 rounded-xl backdrop-blur-sm transition-colors"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-ellipsis-vertical w-5 h-5 text-white"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="1"
            />
            <circle
              cx="12"
              cy="5"
              r="1"
            />
            <circle
              cx="12"
              cy="19"
              r="1"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
  <div
    class="absolute bottom-0 left-0 right-0 p-8 bg-gradient-to-t from-black/80 via-black/60 to-transparent"
  >
    <div
      class="max-w-2xl mx-auto flex items-center justify-center gap-6"
    >
      <button
        aria-label="Mute microphone"
        aria-pressed="false"
        class="p-6 rounded-full transition-all bg-white/10 hover:bg-white/20"
        whilehover="[object Object]"
        whiletap="[object Object]"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-mic w-6 h-6 text-white"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 19v3"
          />
          <path
            d="M19 10v2a7 7 0 0 1-14 0v-2"
          />
          <rect
            height="13"
            rx="3"
            width="6"
            x="9"
            y="2"
          />
        </svg>
      </button>
      <button
        aria-label="Turn off camera"
        aria-pressed="false"
        class="p-6 rounded-full transition-all bg-white/10 hover:bg-white/20"
        whilehover="[object Object]"
        whiletap="[object Object]"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-video w-6 h-6 text-white"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m16 13 5.223 3.482a.5.5 0 0 0 .777-.416V7.87a.5.5 0 0 0-.752-.432L16 10.5"
          />
          <rect
            height="12"
            rx="2"
            width="14"
            x="2"
            y="6"
          />
        </svg>
      </button>
      <button
        aria-label="End call"
        class="p-8 bg-red-500 hover:bg-red-600 rounded-full transition-all shadow-2xl"
        whilehover="[object Object]"
        whiletap="[object Object]"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-phone-off w-7 h-7 text-white"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.1 13.9a14 14 0 0 0 3.732 2.668 1 1 0 0 0 1.213-.303l.355-.465A2 2 0 0 1 17 15h3a2 2 0 0 1 2 2v3a2 2 0 0 1-2 2 18 18 0 0 1-12.728-5.272"
          />
          <path
            d="M22 2 2 22"
          />
          <path
            d="M4.76 13.582A18 18 0 0 1 2 4a2 2 0 0 1 2-2h3a2 2 0 0 1 2 2v3a2 2 0 0 1-.8 1.6l-.468.351a1 1 0 0 0-.292 1.233 14 14 0 0 0 .244.473"
          />
        </svg>
      </button>
      <button
        aria-label="Share screen"
        aria-pressed="false"
        class="p-6 rounded-full transition-all bg-white/10 hover:bg-white/20"
        whilehover="[object Object]"
        whiletap="[object Object]"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-monitor w-6 h-6 text-white"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="14"
            rx="2"
            width="20"
            x="2"
            y="3"
          />
          <line
            x1="8"
            x2="16"
            y1="21"
            y2="21"
          />
          <line
            x1="12"
            x2="12"
            y1="17"
            y2="21"
          />
        </svg>
      </button>
      <button
        aria-label="Mute speaker"
        aria-pressed="false"
        class="p-6 bg-white/10 hover:bg-white/20 rounded-full transition-all"
        whilehover="[object Object]"
        whiletap="[object Object]"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-volume2 lucide-volume-2 w-6 h-6 text-white"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
          />
          <path
            d="M16 9a5 5 0 0 1 0 6"
          />
          <path
            d="M19.364 18.364a9 9 0 0 0 0-12.728"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`CallScreenPage Snapshot Tests matches snapshot with audio muted 1`] = `
<div
  aria-label="Video call screen"
  class="fixed inset-0 bg-gray-900 z-50"
  role="main"
>
  <div
    class="absolute inset-0"
  >
    <video
      aria-label="Remote participant video"
      autoplay=""
      class="w-full h-full object-cover"
      playsinline=""
    />
  </div>
  <div
    animate="[object Object]"
    class="absolute top-6 right-6 w-48 h-36 bg-gray-800 rounded-2xl overflow-hidden shadow-2xl border-2 border-white/20"
    dragconstraints="[object Object]"
    initial="[object Object]"
  >
    <video
      aria-label="Your video"
      autoplay=""
      class="w-full h-full object-cover"
      playsinline=""
    />
    <div
      class="absolute bottom-2 left-2 px-2 py-1 bg-black/60 rounded text-white text-xs"
    >
      You
    </div>
  </div>
  <div
    class="absolute top-0 left-0 right-0 p-6 bg-gradient-to-b from-black/60 to-transparent"
  >
    <div
      class="flex items-center justify-between"
    >
      <div>
        <h3
          class="text-white text-xl font-semibold"
        >
          John Doe
        </h3>
        <p
          class="text-gray-300 text-sm"
        >
          0:00
        </p>
      </div>
      <div
        class="flex gap-3"
      >
        <button
          aria-label="Participants"
          class="p-3 bg-white/10 hover:bg-white/20 rounded-xl backdrop-blur-sm transition-colors"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-users w-5 h-5 text-white"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
            />
            <path
              d="M16 3.128a4 4 0 0 1 0 7.744"
            />
            <path
              d="M22 21v-2a4 4 0 0 0-3-3.87"
            />
            <circle
              cx="9"
              cy="7"
              r="4"
            />
          </svg>
        </button>
        <button
          aria-label="More options"
          class="p-3 bg-white/10 hover:bg-white/20 rounded-xl backdrop-blur-sm transition-colors"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-ellipsis-vertical w-5 h-5 text-white"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="1"
            />
            <circle
              cx="12"
              cy="5"
              r="1"
            />
            <circle
              cx="12"
              cy="19"
              r="1"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
  <div
    class="absolute bottom-0 left-0 right-0 p-8 bg-gradient-to-t from-black/80 via-black/60 to-transparent"
  >
    <div
      class="max-w-2xl mx-auto flex items-center justify-center gap-6"
    >
      <button
        aria-label="Unmute microphone"
        aria-pressed="true"
        class="p-6 rounded-full transition-all bg-red-500 hover:bg-red-600"
        whilehover="[object Object]"
        whiletap="[object Object]"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-mic-off w-6 h-6 text-white"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 19v3"
          />
          <path
            d="M15 9.34V5a3 3 0 0 0-5.68-1.33"
          />
          <path
            d="M16.95 16.95A7 7 0 0 1 5 12v-2"
          />
          <path
            d="M18.89 13.23A7 7 0 0 0 19 12v-2"
          />
          <path
            d="m2 2 20 20"
          />
          <path
            d="M9 9v3a3 3 0 0 0 5.12 2.12"
          />
        </svg>
      </button>
      <button
        aria-label="Turn off camera"
        aria-pressed="false"
        class="p-6 rounded-full transition-all bg-white/10 hover:bg-white/20"
        whilehover="[object Object]"
        whiletap="[object Object]"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-video w-6 h-6 text-white"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m16 13 5.223 3.482a.5.5 0 0 0 .777-.416V7.87a.5.5 0 0 0-.752-.432L16 10.5"
          />
          <rect
            height="12"
            rx="2"
            width="14"
            x="2"
            y="6"
          />
        </svg>
      </button>
      <button
        aria-label="End call"
        class="p-8 bg-red-500 hover:bg-red-600 rounded-full transition-all shadow-2xl"
        whilehover="[object Object]"
        whiletap="[object Object]"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-phone-off w-7 h-7 text-white"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.1 13.9a14 14 0 0 0 3.732 2.668 1 1 0 0 0 1.213-.303l.355-.465A2 2 0 0 1 17 15h3a2 2 0 0 1 2 2v3a2 2 0 0 1-2 2 18 18 0 0 1-12.728-5.272"
          />
          <path
            d="M22 2 2 22"
          />
          <path
            d="M4.76 13.582A18 18 0 0 1 2 4a2 2 0 0 1 2-2h3a2 2 0 0 1 2 2v3a2 2 0 0 1-.8 1.6l-.468.351a1 1 0 0 0-.292 1.233 14 14 0 0 0 .244.473"
          />
        </svg>
      </button>
      <button
        aria-label="Share screen"
        aria-pressed="false"
        class="p-6 rounded-full transition-all bg-white/10 hover:bg-white/20"
        whilehover="[object Object]"
        whiletap="[object Object]"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-monitor w-6 h-6 text-white"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="14"
            rx="2"
            width="20"
            x="2"
            y="3"
          />
          <line
            x1="8"
            x2="16"
            y1="21"
            y2="21"
          />
          <line
            x1="12"
            x2="12"
            y1="17"
            y2="21"
          />
        </svg>
      </button>
      <button
        aria-label="Mute speaker"
        aria-pressed="false"
        class="p-6 bg-white/10 hover:bg-white/20 rounded-full transition-all"
        whilehover="[object Object]"
        whiletap="[object Object]"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-volume2 lucide-volume-2 w-6 h-6 text-white"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
          />
          <path
            d="M16 9a5 5 0 0 1 0 6"
          />
          <path
            d="M19.364 18.364a9 9 0 0 0 0-12.728"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`CallScreenPage Snapshot Tests matches snapshot with screen sharing 1`] = `
<div
  aria-label="Video call screen"
  class="fixed inset-0 bg-gray-900 z-50"
  role="main"
>
  <div
    class="absolute inset-0"
  >
    <video
      aria-label="Remote participant video"
      autoplay=""
      class="w-full h-full object-cover"
      playsinline=""
    />
  </div>
  <div
    animate="[object Object]"
    class="absolute top-6 right-6 w-48 h-36 bg-gray-800 rounded-2xl overflow-hidden shadow-2xl border-2 border-white/20"
    dragconstraints="[object Object]"
    initial="[object Object]"
  >
    <video
      aria-label="Your video"
      autoplay=""
      class="w-full h-full object-cover"
      playsinline=""
    />
    <div
      class="absolute bottom-2 left-2 px-2 py-1 bg-black/60 rounded text-white text-xs"
    >
      You
    </div>
  </div>
  <div
    class="absolute top-0 left-0 right-0 p-6 bg-gradient-to-b from-black/60 to-transparent"
  >
    <div
      class="flex items-center justify-between"
    >
      <div>
        <h3
          class="text-white text-xl font-semibold"
        >
          John Doe
        </h3>
        <p
          class="text-gray-300 text-sm"
        >
          0:00
        </p>
      </div>
      <div
        class="flex gap-3"
      >
        <button
          aria-label="Participants"
          class="p-3 bg-white/10 hover:bg-white/20 rounded-xl backdrop-blur-sm transition-colors"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-users w-5 h-5 text-white"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
            />
            <path
              d="M16 3.128a4 4 0 0 1 0 7.744"
            />
            <path
              d="M22 21v-2a4 4 0 0 0-3-3.87"
            />
            <circle
              cx="9"
              cy="7"
              r="4"
            />
          </svg>
        </button>
        <button
          aria-label="More options"
          class="p-3 bg-white/10 hover:bg-white/20 rounded-xl backdrop-blur-sm transition-colors"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-ellipsis-vertical w-5 h-5 text-white"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="1"
            />
            <circle
              cx="12"
              cy="5"
              r="1"
            />
            <circle
              cx="12"
              cy="19"
              r="1"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
  <div
    class="absolute bottom-0 left-0 right-0 p-8 bg-gradient-to-t from-black/80 via-black/60 to-transparent"
  >
    <div
      class="max-w-2xl mx-auto flex items-center justify-center gap-6"
    >
      <button
        aria-label="Mute microphone"
        aria-pressed="false"
        class="p-6 rounded-full transition-all bg-white/10 hover:bg-white/20"
        whilehover="[object Object]"
        whiletap="[object Object]"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-mic w-6 h-6 text-white"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 19v3"
          />
          <path
            d="M19 10v2a7 7 0 0 1-14 0v-2"
          />
          <rect
            height="13"
            rx="3"
            width="6"
            x="9"
            y="2"
          />
        </svg>
      </button>
      <button
        aria-label="Turn off camera"
        aria-pressed="false"
        class="p-6 rounded-full transition-all bg-white/10 hover:bg-white/20"
        whilehover="[object Object]"
        whiletap="[object Object]"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-video w-6 h-6 text-white"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m16 13 5.223 3.482a.5.5 0 0 0 .777-.416V7.87a.5.5 0 0 0-.752-.432L16 10.5"
          />
          <rect
            height="12"
            rx="2"
            width="14"
            x="2"
            y="6"
          />
        </svg>
      </button>
      <button
        aria-label="End call"
        class="p-8 bg-red-500 hover:bg-red-600 rounded-full transition-all shadow-2xl"
        whilehover="[object Object]"
        whiletap="[object Object]"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-phone-off w-7 h-7 text-white"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.1 13.9a14 14 0 0 0 3.732 2.668 1 1 0 0 0 1.213-.303l.355-.465A2 2 0 0 1 17 15h3a2 2 0 0 1 2 2v3a2 2 0 0 1-2 2 18 18 0 0 1-12.728-5.272"
          />
          <path
            d="M22 2 2 22"
          />
          <path
            d="M4.76 13.582A18 18 0 0 1 2 4a2 2 0 0 1 2-2h3a2 2 0 0 1 2 2v3a2 2 0 0 1-.8 1.6l-.468.351a1 1 0 0 0-.292 1.233 14 14 0 0 0 .244.473"
          />
        </svg>
      </button>
      <button
        aria-label="Stop sharing"
        aria-pressed="true"
        class="p-6 rounded-full transition-all bg-blue-500 hover:bg-blue-600"
        whilehover="[object Object]"
        whiletap="[object Object]"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-monitor w-6 h-6 text-white"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="14"
            rx="2"
            width="20"
            x="2"
            y="3"
          />
          <line
            x1="8"
            x2="16"
            y1="21"
            y2="21"
          />
          <line
            x1="12"
            x2="12"
            y1="17"
            y2="21"
          />
        </svg>
      </button>
      <button
        aria-label="Mute speaker"
        aria-pressed="false"
        class="p-6 bg-white/10 hover:bg-white/20 rounded-full transition-all"
        whilehover="[object Object]"
        whiletap="[object Object]"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-volume2 lucide-volume-2 w-6 h-6 text-white"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
          />
          <path
            d="M16 9a5 5 0 0 1 0 6"
          />
          <path
            d="M19.364 18.364a9 9 0 0 0 0-12.728"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`CallScreenPage Snapshot Tests matches snapshot with video disabled 1`] = `
<div
  aria-label="Video call screen"
  class="fixed inset-0 bg-gray-900 z-50"
  role="main"
>
  <div
    class="absolute inset-0"
  >
    <video
      aria-label="Remote participant video"
      autoplay=""
      class="w-full h-full object-cover"
      playsinline=""
    />
  </div>
  <div
    class="absolute top-0 left-0 right-0 p-6 bg-gradient-to-b from-black/60 to-transparent"
  >
    <div
      class="flex items-center justify-between"
    >
      <div>
        <h3
          class="text-white text-xl font-semibold"
        >
          John Doe
        </h3>
        <p
          class="text-gray-300 text-sm"
        >
          0:00
        </p>
      </div>
      <div
        class="flex gap-3"
      >
        <button
          aria-label="Participants"
          class="p-3 bg-white/10 hover:bg-white/20 rounded-xl backdrop-blur-sm transition-colors"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-users w-5 h-5 text-white"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
            />
            <path
              d="M16 3.128a4 4 0 0 1 0 7.744"
            />
            <path
              d="M22 21v-2a4 4 0 0 0-3-3.87"
            />
            <circle
              cx="9"
              cy="7"
              r="4"
            />
          </svg>
        </button>
        <button
          aria-label="More options"
          class="p-3 bg-white/10 hover:bg-white/20 rounded-xl backdrop-blur-sm transition-colors"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-ellipsis-vertical w-5 h-5 text-white"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="1"
            />
            <circle
              cx="12"
              cy="5"
              r="1"
            />
            <circle
              cx="12"
              cy="19"
              r="1"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
  <div
    class="absolute bottom-0 left-0 right-0 p-8 bg-gradient-to-t from-black/80 via-black/60 to-transparent"
  >
    <div
      class="max-w-2xl mx-auto flex items-center justify-center gap-6"
    >
      <button
        aria-label="Mute microphone"
        aria-pressed="false"
        class="p-6 rounded-full transition-all bg-white/10 hover:bg-white/20"
        whilehover="[object Object]"
        whiletap="[object Object]"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-mic w-6 h-6 text-white"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 19v3"
          />
          <path
            d="M19 10v2a7 7 0 0 1-14 0v-2"
          />
          <rect
            height="13"
            rx="3"
            width="6"
            x="9"
            y="2"
          />
        </svg>
      </button>
      <button
        aria-label="Turn on camera"
        aria-pressed="true"
        class="p-6 rounded-full transition-all bg-red-500 hover:bg-red-600"
        whilehover="[object Object]"
        whiletap="[object Object]"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-video-off w-6 h-6 text-white"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.66 6H14a2 2 0 0 1 2 2v2.5l5.248-3.062A.5.5 0 0 1 22 7.87v8.196"
          />
          <path
            d="M16 16a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h2"
          />
          <path
            d="m2 2 20 20"
          />
        </svg>
      </button>
      <button
        aria-label="End call"
        class="p-8 bg-red-500 hover:bg-red-600 rounded-full transition-all shadow-2xl"
        whilehover="[object Object]"
        whiletap="[object Object]"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-phone-off w-7 h-7 text-white"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.1 13.9a14 14 0 0 0 3.732 2.668 1 1 0 0 0 1.213-.303l.355-.465A2 2 0 0 1 17 15h3a2 2 0 0 1 2 2v3a2 2 0 0 1-2 2 18 18 0 0 1-12.728-5.272"
          />
          <path
            d="M22 2 2 22"
          />
          <path
            d="M4.76 13.582A18 18 0 0 1 2 4a2 2 0 0 1 2-2h3a2 2 0 0 1 2 2v3a2 2 0 0 1-.8 1.6l-.468.351a1 1 0 0 0-.292 1.233 14 14 0 0 0 .244.473"
          />
        </svg>
      </button>
      <button
        aria-label="Share screen"
        aria-pressed="false"
        class="p-6 rounded-full transition-all bg-white/10 hover:bg-white/20"
        whilehover="[object Object]"
        whiletap="[object Object]"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-monitor w-6 h-6 text-white"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="14"
            rx="2"
            width="20"
            x="2"
            y="3"
          />
          <line
            x1="8"
            x2="16"
            y1="21"
            y2="21"
          />
          <line
            x1="12"
            x2="12"
            y1="17"
            y2="21"
          />
        </svg>
      </button>
      <button
        aria-label="Mute speaker"
        aria-pressed="false"
        class="p-6 bg-white/10 hover:bg-white/20 rounded-full transition-all"
        whilehover="[object Object]"
        whiletap="[object Object]"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-volume2 lucide-volume-2 w-6 h-6 text-white"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
          />
          <path
            d="M16 9a5 5 0 0 1 0 6"
          />
          <path
            d="M19.364 18.364a9 9 0 0 0 0-12.728"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
